[Fix] scrollbars

--- a/styles/BlogDetail.module.css
+++ b/styles/BlogDetail.module.css
@@ -140,6 +140,18 @@
   box-shadow: inset 0px 0px 5px #00000062;
   margin: 5px;
   display: block;
+  overflow-x: auto;
+}
+
+.contentBlog code::-webkit-scrollbar{
+  height: 5px;
+  border-radius: 5px;
+  background-color: #ff00006c;
+}
+.contentBlog code::-webkit-scrollbar-thumb{
+  height: 5px;
+  border-radius: 5px;
+  background-color: #ff0000;
 }
 
 .contentBlog .returnToBlog {
